--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ license = "AGPL-3.0-or-later"
 
 [dependencies]
 ndarray = { version = "0.15.4", features = ["rayon"] }
+once_cell = "1.9.0"
 rayon = "1.5.1"
+regex = "1.5.4"
 
 [profile.release]
 lto = "thin"
