--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "postflop_solver"
+name = "postflop-solver"
 version = "0.1.0"
 authors = ["Wataru Inariba"]
 edition = "2021"
 license = "AGPL-3.0-or-later"
 
 [dependencies]
+holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }
 ndarray = { version = "0.15.4", features = ["rayon"] }
 once_cell = "1.9.0"
 rayon = "1.5.1"
