--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "AGPL-3.0-or-later"
 
 [dependencies]
 holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }
-ndarray = { version = "0.15.4", features = ["rayon"] }
+num-traits = "0.2.14"
 once_cell = "1.9.0"
 rayon = "1.5.1"
 regex = "1.5.4"
