--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ license = "AGPL-3.0-or-later"
 
 [dependencies]
 holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }
-num-traits = "0.2.14"
-once_cell = "1.9.0"
-rayon = "1.5.1"
-regex = "1.5.4"
+num-traits = "0.2"
+once_cell = "1.9"
+rayon = "1.5"
+regex = "1.5"
+
+[features]
+default = []
+custom_alloc = []
 
 [profile.release]
 lto = "thin"
