--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ license = "AGPL-3.0-or-later"
 holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }
 num-traits = "0.2"
 once_cell = "1.12"
-rayon = "1.5"
+rayon = { version = "1.5", optional = true }
 regex = "1.5"
 
 [features]
-default = []
+default = ["rayon"]
 custom_alloc = []
 
 [profile.release]
