test: increase CI commands

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,13 +1,33 @@
 name: Rust
 on: push
+
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: --deny warnings
+  RUSTDOCFLAGS: --deny warnings
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Install nightly
+      run: |
+        rustup toolchain install nightly
+        rustup component add clippy --toolchain nightly
     - name: Build
-      run: cargo build --release
+      run: |
+        cargo build --release
+        cargo +nightly build --release --features custom_alloc
     - name: Run tests
-      run: cargo test --release
+      run: |
+        cargo test --release
+        cargo +nightly test --release --features custom_alloc -- --test-threads 1
+    - name: Clippy
+      run: |
+        cargo clippy --release -- -A clippy::needless_range_loop
+        cargo +nightly clippy --release --features custom_alloc -- -A clippy::needless_range_loop
+    - name: Check formatting
+      run: cargo fmt --all --check
+    - name: Check documentation
+      run: cargo doc --release
