--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2021"
 license = "AGPL-3.0-or-later"
 
 [dependencies]
-holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }
+holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator", optional = true }
 num-traits = "0.2"
 once_cell = "1.12"
 rayon = { version = "1.5", optional = true }
 regex = "1.5"
 
 [features]
-default = ["rayon"]
+default = ["holdem-hand-evaluator", "rayon"]
 custom_alloc = []
 
 [profile.release]
