--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Wataru Inariba"]
 edition = "2021"
 description = "An open-source postflop solver for Texas hold'em poker"
+documentation = "https://b-inary.github.io/postflop_solver/postflop_solver/"
 repository = "https://github.com/b-inary/postflop-solver"
 license = "AGPL-3.0-or-later"
 
