--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,13 @@ repository = "https://github.com/b-inary/postflop-solver"
 license = "AGPL-3.0-or-later"
 
 [dependencies]
-holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator", optional = true }
 num-traits = "0.2.15"
 once_cell = "1.13.0"
 rayon = { version = "1.5.3", optional = true }
 regex = "1.6.0"
 
 [features]
-default = ["holdem-hand-evaluator", "rayon"]
+default = ["rayon"]
 custom-alloc = []
 
 [profile.release]
