docs: move example to `examples/basic.rs`

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Build
       run: |
         cargo build --release --features bincode
+        cargo run --release --features bincode --example basic
         cargo +nightly build --release --features custom-alloc
     - name: Run tests
       run: |
