--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ bincode = { version = "2.0.0-rc.3", optional = true }
 once_cell = "1.17.1"
 rayon = { version = "1.7.0", optional = true }
 regex = "1.8.1"
-zstd = { version = "0.12.3", optional = true, default-features = false }
+zstd = { version = "0.12.3", optional = true, features = ["zstdmt"] }
 
 [features]
 default = ["bincode", "rayon"]
