--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,12 @@ license = "AGPL-3.0-or-later"
 
 [dependencies]
 bincode = { version = "2.0.0-rc.3", optional = true }
-once_cell = "1.17.1"
-rayon = { version = "1.7.0", optional = true }
-regex = "1.8.1"
-zstd = { version = "0.12.3", optional = true, features = ["zstdmt"] }
+once_cell = "1.18.0"
+rayon = { version = "1.8.0", optional = true }
+regex = "1.9.5"
+zstd = { version = "0.12.4", optional = true, default-features = false }
 
 [features]
 default = ["bincode", "rayon"]
 custom-alloc = []
+rayon = ["dep:rayon", "zstd?/zstdmt"]
